vlib/v/checker/tests/for_in_empty_range_comptime_err.out
vlib/v/checker/tests/for_in_empty_range_comptime_err.vv:2:11: error: empty range: `4 .. 2` will never execute
    1 | fn main() {
    2 |     for i in 4 .. int(2) {
      |              ~~~~~~~~~~~
    3 |         println(i)
    4 |     }
vlib/v/checker/tests/for_in_empty_range_comptime_err.vv:6:11: error: empty range: `4 .. 2` will never execute
    4 |     }
    5 | 
    6 |     for i in int(4) .. 2 {
      |              ~~~~~~~~~~~
    7 |         println(i)
    8 |     }
vlib/v/checker/tests/for_in_empty_range_comptime_err.vv:10:11: error: empty range: `4 .. 2` will never execute
    8 |     }
    9 | 
   10 |     for i in int(4) .. int(2) {
      |              ~~~~~~~~~~~~~~~~
   11 |         println(i)
   12 |     }
vlib/v/checker/tests/for_in_empty_range_comptime_err.vv:14:11: error: empty range: `4 .. 2` will never execute
   12 |     }
   13 | 
   14 |     for b in u16(4) .. u8(2) {
      |              ~~~~~~~~~~~~~~~
   15 |         println(b)
   16 |     }
vlib/v/checker/tests/for_in_empty_range_comptime_err.vv:18:11: error: empty range: `4 .. 2` will never execute
   16 |     }
   17 | 
   18 |     for i in u8(4) .. u16(2) {
      |              ~~~~~~~~~~~~~~~
   19 |         println(i)
   20 |     }